2012-02-13  Araki Ken  <arakiken@users.sf.net>

	* x_sb_screen.c:
	  button_press() event is implemented for wheel mouse in win32.
	  (Wheel mouse in win32 hasn't worked since 2012-08-26 commit.)

	* mkf_tblfunc_loader.h:
	  If mkf module is not found, mkf_map_func() and mkf_map_func2()
	  return 0 to avoid segfault.

	* xwindow/Makefile.in, configure.in, win32/x_dnd.c, xlib/x_dnd.c:
	  @DND_OBJ@ is obsolete. If DISABLE_XDND is defined, comment out
	  all source code in x_dnd.c.

2012-02-12  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.win32, doc/en/README.win32, README: Updated.

	* win32/x_font.c:
	  - use_variable_column_width and letter_space options are supported.
	  - x_convert_ucs4_to_utf16() is moved from x_draw_str.c

	* win32/x_window.c:
	  x_window_scroll_{left|right}ward_region() are implemented to
	  scroll screen correctly in vertical mode.

	* ml_vt100_parser.c:
	  trigger_xterm_event argument of start_vt100_cmd() after
	  xterm_listener::bel() is changed from 0 to 1 in order to erase
	  cursor which xterm_listener::bel() drew if bel_mode is visual.

2012-02-11  Araki Ken  <arakiken@users.sf.net>

	* x_display.[ch], xlib/x_window.c, win32/x_window.c:
	  x_display_t::width and x_display_t::height members are added and
	  used instead of calling Display{Width|Height}() or
	  GetSystemMetrics(SM_C{X|Y}SCREEN) directly.

	* x_screen.c, x_window.h, {xlib|win32}/x_window.c:
	  A problem that margin area isn't cleared after visual bell is fixed.

	* configure.in, mlterm-menu/Makefile.in, main/Makefile.in, xwindow/Makefile.in,
	  scrollbar/sample/Makefile.in, tool/mlconfig/Makefile.in:
	  @WIN32TAG@ -> _@GUI@

	* xwindow/:
	  x_color.c       -> xlib/x_color.c
	  x_color_win32.c -> win32/x_color.c
	  x_connect_dialog.c -> xlib/x_connect_dialog.c, win32/x_connect_dialog.c
	  x_display.c     -> xlib/x_display.c
	  x_display_win32.c -> win32/x_display.c
	  x_dnd.c         -> xlib/x_dnd.c
	  x_dnd_win32.c   -> win32/x_dnd.c